# cog-rag-cognee

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api.py
.claude/: IMPROVEMENTS.md
.github/workflows/: ci.yml
api/: app.py  deps.py  routes.py
benchmark/: questions.json
cog_rag_cognee/: __init__.py  cognee_setup.py  config.py  docling_loader.py  exceptions.py  graph_client.py  health.py  logging_config.py  models.py  ontology.py  request_context.py  service.py
data/: sample_en.txt  sample_ru.txt
docs/plans/: 2026-02-22-cog-rag-cognee-design.md  2026-02-22-implementation-plan.md
ontologies/: example.owl
scripts/: ingest.py  pull_models.sh  run_benchmark.py
tests/: conftest.py  test_app.py  test_app_extra.py  test_app_lifecycle.py  test_benchmark.py  test_cognee_setup.py  test_cognee_setup_apply.py  test_config.py  test_deps.py  test_docling_loader.py  test_graph_client.py  test_health.py  test_health_status_logic.py  test_i18n.py  test_logging_config.py  test_models.py  test_ontology.py  test_rate_limit.py  test_request_id.py  test_security.py  test_service.py
ui/: i18n.py  streamlit_app.py
ui/components/: graph_viz.py
