[project]
name = "cog-rag-cognee"
version = "0.1.0"
description = "Semantic memory layer with Cognee SDK — 100% local stack"
requires-python = ">=3.11,<3.14"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["UP047"]  # TypeVar syntax — keep compat with Python 3.11

[tool.ruff.lint.per-file-ignores]
"api/routes.py" = ["B008"]  # FastAPI Depends/File/Form/Query in defaults is standard
